Use methods to specify GeneratorOptions options for styles