@@ -1,26 +1,28 @@
 package com.faforever.neroxis.generator.style;
 
-import com.faforever.neroxis.generator.GeneratorParameters;
+import com.faforever.neroxis.generator.GeneratorOptions;
 import com.faforever.neroxis.generator.prop.BasicPropGenerator;
 import com.faforever.neroxis.generator.prop.EnemyCivPropGenerator;
 import com.faforever.neroxis.generator.prop.LargeBattlePropGenerator;
 import com.faforever.neroxis.generator.prop.NavyWrecksPropGenerator;
 import com.faforever.neroxis.generator.prop.NeutralCivPropGenerator;
+import com.faforever.neroxis.generator.prop.PropGenerator;
 import com.faforever.neroxis.generator.prop.RockFieldPropGenerator;
 import com.faforever.neroxis.generator.prop.SmallBattlePropGenerator;
 import lombok.Getter;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Getter
 public class BasicStyleGenerator extends StyleGenerator {
+
     @Override
-    protected void initialize(GeneratorParameters generatorParameters, long seed) {
-        super.initialize(generatorParameters, seed);
-        propGenerators.addAll(
-                Arrays.asList(new BasicPropGenerator(), new EnemyCivPropGenerator(), new LargeBattlePropGenerator(),
-                              new NavyWrecksPropGenerator(), new NeutralCivPropGenerator(),
-                              new RockFieldPropGenerator(), new SmallBattlePropGenerator()));
+    protected GeneratorOptions<PropGenerator> getPropGeneratorOptions() {
+        return new GeneratorOptions<>(new BasicPropGenerator(),
+                                      List.of(new BasicPropGenerator(), new EnemyCivPropGenerator(),
+                                              new LargeBattlePropGenerator(), new NavyWrecksPropGenerator(),
+                                              new NeutralCivPropGenerator(), new RockFieldPropGenerator(),
+                                              new SmallBattlePropGenerator()));
     }
 }
 
