@@ -1,16 +1,18 @@
 package com.faforever.neroxis.generator.style;
 
-import com.faforever.neroxis.generator.GeneratorParameters;
+import com.faforever.neroxis.generator.GeneratorOptions;
 import com.faforever.neroxis.generator.ParameterConstraints;
 import com.faforever.neroxis.generator.prop.BasicPropGenerator;
 import com.faforever.neroxis.generator.prop.EnemyCivPropGenerator;
 import com.faforever.neroxis.generator.prop.NavyWrecksPropGenerator;
 import com.faforever.neroxis.generator.prop.NeutralCivPropGenerator;
+import com.faforever.neroxis.generator.prop.PropGenerator;
 import com.faforever.neroxis.generator.prop.RockFieldPropGenerator;
 import com.faforever.neroxis.generator.prop.SmallBattlePropGenerator;
 import com.faforever.neroxis.generator.terrain.BigIslandsTerrainGenerator;
+import com.faforever.neroxis.generator.terrain.TerrainGenerator;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class BigIslandsStyleGenerator extends StyleGenerator {
     public BigIslandsStyleGenerator() {
@@ -27,13 +29,17 @@ public class BigIslandsStyleGenerator extends StyleGenerator {
     }
 
     @Override
-    protected void initialize(GeneratorParameters generatorParameters, long seed) {
-        super.initialize(generatorParameters, seed);
-        terrainGenerator = new BigIslandsTerrainGenerator();
-        propGenerators.addAll(
-                Arrays.asList(new BasicPropGenerator(), new EnemyCivPropGenerator(), new NavyWrecksPropGenerator(),
-                              new NeutralCivPropGenerator(), new RockFieldPropGenerator(),
-                              new SmallBattlePropGenerator()));
+    protected GeneratorOptions<TerrainGenerator> getTerrainGeneratorOptions() {
+        return new GeneratorOptions<>(new BigIslandsTerrainGenerator());
+    }
+
+    @Override
+    protected GeneratorOptions<PropGenerator> getPropGeneratorOptions() {
+        return new GeneratorOptions<>(new BasicPropGenerator(),
+                                      List.of(new BasicPropGenerator(), new EnemyCivPropGenerator(),
+                                              new NavyWrecksPropGenerator(),
+                                              new NeutralCivPropGenerator(), new RockFieldPropGenerator(),
+                                              new SmallBattlePropGenerator()));
     }
 }
 
