@@ -1,13 +1,16 @@
 package com.faforever.neroxis.generator.style;
 
-import com.faforever.neroxis.generator.GeneratorParameters;
+import com.faforever.neroxis.generator.GeneratorOptions;
 import com.faforever.neroxis.generator.ParameterConstraints;
 import com.faforever.neroxis.generator.prop.BasicPropGenerator;
 import com.faforever.neroxis.generator.prop.NavyWrecksPropGenerator;
+import com.faforever.neroxis.generator.prop.PropGenerator;
+import com.faforever.neroxis.generator.resource.ResourceGenerator;
 import com.faforever.neroxis.generator.resource.WaterMexResourceGenerator;
 import com.faforever.neroxis.generator.terrain.FloodedTerrainGenerator;
+import com.faforever.neroxis.generator.terrain.TerrainGenerator;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class FloodedStyleGenerator extends StyleGenerator {
     public FloodedStyleGenerator() {
@@ -24,11 +27,19 @@ public class FloodedStyleGenerator extends StyleGenerator {
     }
 
     @Override
-    protected void initialize(GeneratorParameters generatorParameters, long seed) {
-        super.initialize(generatorParameters, seed);
-        terrainGenerator = new FloodedTerrainGenerator();
-        resourceGenerator = new WaterMexResourceGenerator();
-        propGenerators.addAll(Arrays.asList(new BasicPropGenerator(), new NavyWrecksPropGenerator()));
+    protected GeneratorOptions<TerrainGenerator> getTerrainGeneratorOptions() {
+        return new GeneratorOptions<>(new FloodedTerrainGenerator());
+    }
+
+    @Override
+    protected GeneratorOptions<ResourceGenerator> getResourceGeneratorOptions() {
+        return new GeneratorOptions<>(new WaterMexResourceGenerator());
+    }
+
+    @Override
+    protected GeneratorOptions<PropGenerator> getPropGeneratorOptions() {
+        return new GeneratorOptions<>(new BasicPropGenerator(),
+                                      List.of(new BasicPropGenerator(), new NavyWrecksPropGenerator()));
     }
 }
 
