@@ -1,14 +1,17 @@
 package com.faforever.neroxis.generator.style;
 
-import com.faforever.neroxis.generator.GeneratorParameters;
+import com.faforever.neroxis.generator.GeneratorOptions;
 import com.faforever.neroxis.generator.ParameterConstraints;
 import com.faforever.neroxis.generator.prop.HighReclaimPropGenerator;
+import com.faforever.neroxis.generator.prop.PropGenerator;
+import com.faforever.neroxis.generator.terrain.BasicTerrainGenerator;
 import com.faforever.neroxis.generator.terrain.DropPlateauTerrainGenerator;
 import com.faforever.neroxis.generator.terrain.LittleMountainTerrainGenerator;
 import com.faforever.neroxis.generator.terrain.MountainRangeTerrainGenerator;
+import com.faforever.neroxis.generator.terrain.TerrainGenerator;
 import com.faforever.neroxis.generator.terrain.ValleyTerrainGenerator;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class HighReclaimStyleGenerator extends StyleGenerator {
     public HighReclaimStyleGenerator() {
@@ -27,11 +30,15 @@ public class HighReclaimStyleGenerator extends StyleGenerator {
     }
 
     @Override
-    protected void initialize(GeneratorParameters generatorParameters, long seed) {
-        super.initialize(generatorParameters, seed);
-        terrainGenerators.addAll(Arrays.asList(new DropPlateauTerrainGenerator(), new MountainRangeTerrainGenerator(),
-                                               new LittleMountainTerrainGenerator(), new ValleyTerrainGenerator()));
-        propGenerator = new HighReclaimPropGenerator();
+    protected GeneratorOptions<TerrainGenerator> getTerrainGeneratorOptions() {
+        return new GeneratorOptions<>(new BasicTerrainGenerator(),
+                                      List.of(new DropPlateauTerrainGenerator(), new MountainRangeTerrainGenerator(),
+                                              new LittleMountainTerrainGenerator(), new ValleyTerrainGenerator()));
+    }
+
+    @Override
+    protected GeneratorOptions<PropGenerator> getPropGeneratorOptions() {
+        return new GeneratorOptions<>(new HighReclaimPropGenerator());
     }
 }
 
