@@ -1,15 +1,18 @@
 package com.faforever.neroxis.generator.style;
 
-import com.faforever.neroxis.generator.GeneratorParameters;
+import com.faforever.neroxis.generator.GeneratorOptions;
 import com.faforever.neroxis.generator.ParameterConstraints;
+import com.faforever.neroxis.generator.prop.BasicPropGenerator;
 import com.faforever.neroxis.generator.prop.LargeBattlePropGenerator;
 import com.faforever.neroxis.generator.prop.NavyWrecksPropGenerator;
 import com.faforever.neroxis.generator.prop.NeutralCivPropGenerator;
+import com.faforever.neroxis.generator.prop.PropGenerator;
 import com.faforever.neroxis.generator.prop.RockFieldPropGenerator;
 import com.faforever.neroxis.generator.prop.SmallBattlePropGenerator;
 import com.faforever.neroxis.generator.terrain.LandBridgeTerrainGenerator;
+import com.faforever.neroxis.generator.terrain.TerrainGenerator;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class LandBridgeStyleGenerator extends StyleGenerator {
     public LandBridgeStyleGenerator() {
@@ -28,14 +31,21 @@ public class LandBridgeStyleGenerator extends StyleGenerator {
     }
 
     @Override
-    protected void initialize(GeneratorParameters generatorParameters, long seed) {
-        super.initialize(generatorParameters, seed);
-        terrainGenerator = new LandBridgeTerrainGenerator();
-        propGenerators.addAll(Arrays.asList(new LargeBattlePropGenerator(), new NavyWrecksPropGenerator(),
-                                            new NeutralCivPropGenerator(), new RockFieldPropGenerator(),
-                                            new SmallBattlePropGenerator()));
-        int mapSize = generatorParameters.mapSize();
-        spawnSeparation = mapSize / 8f;
+    protected GeneratorOptions<TerrainGenerator> getTerrainGeneratorOptions() {
+        return new GeneratorOptions<>(new LandBridgeTerrainGenerator());
+    }
+
+    @Override
+    protected GeneratorOptions<PropGenerator> getPropGeneratorOptions() {
+        return new GeneratorOptions<>(new BasicPropGenerator(),
+                                      List.of(new LargeBattlePropGenerator(), new NavyWrecksPropGenerator(),
+                                              new NeutralCivPropGenerator(), new RockFieldPropGenerator(),
+                                              new SmallBattlePropGenerator()));
+    }
+
+    @Override
+    public float getSpawnSeparation() {
+        return getGeneratorParameters().mapSize() / 8f;
     }
 }
 
