@@ -1,17 +1,19 @@
 package com.faforever.neroxis.generator.style;
 
-import com.faforever.neroxis.generator.GeneratorParameters;
+import com.faforever.neroxis.generator.GeneratorOptions;
 import com.faforever.neroxis.generator.ParameterConstraints;
 import com.faforever.neroxis.generator.prop.BasicPropGenerator;
 import com.faforever.neroxis.generator.prop.EnemyCivPropGenerator;
 import com.faforever.neroxis.generator.prop.HighReclaimPropGenerator;
 import com.faforever.neroxis.generator.prop.LargeBattlePropGenerator;
 import com.faforever.neroxis.generator.prop.NeutralCivPropGenerator;
+import com.faforever.neroxis.generator.prop.PropGenerator;
 import com.faforever.neroxis.generator.prop.RockFieldPropGenerator;
 import com.faforever.neroxis.generator.prop.SmallBattlePropGenerator;
 import com.faforever.neroxis.generator.terrain.MountainRangeTerrainGenerator;
+import com.faforever.neroxis.generator.terrain.TerrainGenerator;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class MountainRangeStyleGenerator extends StyleGenerator {
 
@@ -27,12 +29,16 @@ public class MountainRangeStyleGenerator extends StyleGenerator {
     }
 
     @Override
-    protected void initialize(GeneratorParameters generatorParameters, long seed) {
-        super.initialize(generatorParameters, seed);
-        terrainGenerator = new MountainRangeTerrainGenerator();
-        propGenerators.addAll(
-                Arrays.asList(new BasicPropGenerator(), new EnemyCivPropGenerator(), new LargeBattlePropGenerator(),
-                              new NeutralCivPropGenerator(), new RockFieldPropGenerator(),
-                              new SmallBattlePropGenerator(), new HighReclaimPropGenerator()));
+    protected GeneratorOptions<TerrainGenerator> getTerrainGeneratorOptions() {
+        return new GeneratorOptions<>(new MountainRangeTerrainGenerator());
+    }
+
+    @Override
+    protected GeneratorOptions<PropGenerator> getPropGeneratorOptions() {
+        return new GeneratorOptions<>(new BasicPropGenerator(),
+                                      List.of(new BasicPropGenerator(), new EnemyCivPropGenerator(),
+                                              new LargeBattlePropGenerator(),
+                                              new NeutralCivPropGenerator(), new RockFieldPropGenerator(),
+                                              new SmallBattlePropGenerator(), new HighReclaimPropGenerator()));
     }
 }
